jdk-example/istio-auth/meeting-server-authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: meeting-server
spec:
  selector:
    matchLabels:
      app: meeting-server
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/default/sa/work-server
